# barcodex-rs

./: COPYING  Cargo.toml  README.md
src/: main.rs
