[package]
name = "barcodex-rs"
version = "0.1.0"
authors = ["Andre Masella <andre.masella@oicr.on.ca>"]
edition = "2018"

[dependencies]
argparse ="^0.2"
bio = "^0.31"
bio-types = "^0.7"
lazy_static = "^1.4"
flate2 = "^1.0"
regex = "^1.3"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
