[package]
name = "barcodex-rs"
version = "0.1.1"
authors = ["Andre Masella <andre.masella@oicr.on.ca>"]
edition = "2018"

[dependencies]
bio = "^0.31"
bio-types = "^0.7"
clap ="3.0.0-beta.1"
flate2 = "^1.0"
lazy_static = "^1.4"
regex = "^1.3"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
