[package]
authors = ["Andre Masella <andre.masella@oicr.on.ca>"]
edition = "2018"
name = "barcodex-rs"
version = "0.1.3"
[dependencies]
bio = "^0.31"
bio-types = "^0.7"
clap = { version = "^3.1", features = ["derive"]}
derive = "*"
flate2 = "^1.0"
lazy_static = "^1.4"
regex = "^1.3"
serde_json = "^1.0"

[dependencies.serde]
features = ["derive"]
version = "^1.0"
